# openapi.yaml
@@ -111,12 +111,6 @@ paths:
       description: Delete all tags
       operationId: delete_tags
       responses:
-        "204":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TagDelete200'
-          description: A success message confirming deletion.
         "500":
           content:
             application/json:
@@ -154,12 +148,6 @@ paths:
       description: Delete an individual tag
       operationId: delete_tag
       responses:
-        "204":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TagDelete200'
-          description: A success message confirming deletion.
         "500":
           content:
             application/json:
@@ -198,12 +186,6 @@ paths:
       description: Delete a tag submission
       operationId: delete_sub
       responses:
-        "204":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/TagDelete200'
-          description: A success message confirming deletion.
         "500":
           content:
             application/json:
@@ -418,22 +400,6 @@ components:
           maxItems: 100
           type: array
       title: Tag200
-      type: object
-    TagDelete200:
-      description: HTTP 200 success response
-      example:
-        code: "200"
-        message: Delete operation successful.
-      properties:
-        code:
-          description: HTTP status code
-          example: "200"
-          type: string
-        message:
-          description: A string detailing specifics of an HTTP operation
-          example: All tags successfully deleted.
-          type: string
-      title: TagDelete200
       type: object
     TagPut200:
       description: HTTP 200 success response
