# tagbase_server/tagbase_server/models/__init__.py
@@ -9,7 +9,6 @@ from tagbase_server.models.error_container import ErrorContainer
 from tagbase_server.models.ingest200 import Ingest200
 from tagbase_server.models.tag import Tag
 from tagbase_server.models.tag200 import Tag200
-from tagbase_server.models.tag_delete200 import TagDelete200
 from tagbase_server.models.tag_put200 import TagPut200
 from tagbase_server.models.tag_submission import TagSubmission
 from tagbase_server.models.tags200 import Tags200
